--- a/tictac.html
+++ b/tictac.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <button id="Restbtn">RESET GAME</button>
+        <button id="Restbtn">RESET_GAME</button>>
     </main>
 
     <script src="tic_tac.js"></script>
