--- a/tictac.html
+++ b/tictac.html
@@ -10,7 +10,7 @@
 <body>
     <div class="msg-container hide">
         <p id="msg"></p>
-        <button id="new-btn">nEW GAME</button>
+        <button id="new-btn">NEW GAME</button>
     </div>
 
     <main>
